# download1

./: CMakeLists.txt  downloadmanager.cpp  downloadmanager.h  downloadtask.cpp  downloadtask.h  downloadworker.cpp  downloadworker.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
